# websocketServer

./: Makefile.11  Makefile.am  Makefile.in  README  clean  config.h.in  config.h.in~  configure  configure.ac  configure.scan  main.cc  nohup.out  predmet.csv  room.json  test.json
CServer/: CServer.h  Makefile.am  Makefile.in
SQLString/: Makefile  Makefile.am  Makefile.in  SQLString.cc  SQLString.h  main.cc  test
SQLString/.deps/: SQLString.Plo
autom4te.cache/: output.2  output.3  output.4  output.5  output.6  requests  traces.0  traces.1  traces.2  traces.3  traces.4  traces.5  traces.6
b64/: main.cc
cookie/: Makefile  Makefile.am  Makefile.in  Makefile0.am  a.out  main.cc  test  uuid.cc  uuid.h
cookie/.deps/: uuid.Plo
createJSON-1/: Makefile  Makefile.am  Makefile.in  SQLHelper.h  SQLString.cc  SQLString.h  fb.cc  log.cc  log.h  main.cc  pathFinder.cc  pathFinder.h  setAction.cc  setAction.h  sqlite-tmp.cc  sqlite.cc  sqlite.h  test.cc  test.sql  toSQL.cc  toSQL.h
createJSON-1/.deps/: pathFinder.Plo  setAction.Plo  sqlite.Plo  toSQL.Plo
include/: Callback.h
info/1 класс/: test.html  test211.txt
log/: Makefile.am  Makefile.in  log.cc
perl/: 5д.csv  q.pl
proxy/: Makefile.am  Makefile.in  actions1.cc  libb64.la  proxy.cc  proxy.h  proxyActions.cc  proxyGetMessage.cc  reducers.h
proxy/111/: Makefile  main.cc  test
proxy/actions/: Makefile.am  Makefile.in  Makefile.test  a.out  actions.cc  actions.h  createHTML.cc  createHTML.h  getFileFoReducers.cc  getFileFoReducers.h  main.cc  saveFile.1.cc  saveFile.cc  test  testSaveFile.cc
proxy/actions/TesT/: a.out  saveFile.cc
proxy/actions/TesT/wiki/: nested_parent.html
proxy/auth/: Makefile-test  Makefile.am  Makefile.in  auth.h  main.cc  test  users.json.1
proxy/b64/: Makefile.am  Makefile.in  b64.h
proxy/postgres/: 1.cc  Makefile.am  Makefile.in  helperJson.cc  helperJson.h  pg.cc  pg.h
proxy/postgres.1/: 2.cc  3.cc  4.cc  a.out  helperJson.cc  helperJson.h  main.cc  pg.cc  pg.h  test
random/: a.out  main.cc
reg/: ACAuth.h  Makefile  Makefile.am  Makefile.in  main.cc  myAuth.cc  myAuth.h  test
reg/.deps/: myAuth.Plo
sql/: Makefile  Makefile.am  Makefile.in  SQLHelper.h  main.cc  sql.cc  sql.h  test  test-inline.cc  test.cc
sql/.deps/: sql.Plo
sql/int/: Makefile  main.cc  test
test/: Callback.h  a.out  main.cc  proxy.cc  proxy.h
test/asm/: 1.c  1.s  createHTML.h  createHTML.s  main-HTML.cc  main-HTML.s  test.s
test/fileCreate/: 1.html  Makefile  a.out  createHTML.cc  main-HTML.cc  saveFile.cc  test  test.html
zip/: Makefile  Makefile.am  Makefile.in  a.out  main.cc  testFile.txt  zip.cc  zip.h  zipper.h  zlib-example.cpp  zlib1.cc
zip/.deps/: zip.Plo
