noinst_LTLIBRARIES = libsqlite.la libsetAction.la libpathFinder.la libtoSQL.la
libsqlite_la_SOURCES = sqlite.cc
#noinst_LTLIBRARIES = libsetAction.la
libsetAction_la_SOURCES = setAction.cc
#noinst_LTLIBRARIES = libpathFinder.la
libpathFinder_la_SOURCES = pathFinder.cc
#noinst_LTLIBRARIES = libtoSQL.la
libtoSQL_la_SOURCES = toSQL.cc
