noinst_LTLIBRARIES = libactions.la
lib_LTLIBRARIES = libactionsBase.la libactionsSaveFile.la libactionsGetFileFoReducers.la libactionsAll.la
libactions_la_SOURCES = actions.cc saveFile.cc getFileFoReducers.cc createHTML.cc
libactionsBase_la_SOURCES = actions.cc
libactionsSaveFile_la_SOURCES = saveFile.cc
libactionsGetFileFoReducers_la_SOURCES = getFileFoReducers.cc
libactionsAll_la_SOURCES = getFileFoReducers.cc saveFile.cc actions.cc
